--- a/main.css
+++ b/main.css
@@ -939,7 +939,7 @@ div.message > div.msg > div.from > span.un {
 
 .id-37356990 .msg .from i.icon-chat-cohost,
 #waitlist .list .user[data-uid="37356990"] .meta.is-staff .name .icon-chat-cohost,
-#user-rollover.id-37356990 .info .role i.icon-chat-cohost,
+#user-rollover.id-37356990 .info .role i.icon-chat-host,
 #user-lists .list.room .user.id-37356990 .icon-chat-cohost {
     background: url("https://i.imgur.com/tAGatAc.png") no-repeat !important;
 }
@@ -984,7 +984,7 @@ div.message > div.msg > div.from > span.un {
 
 .id-37149102 .msg .from i.icon-chat-cohost,
 #waitlist .list .user[data-uid="37149102"] .meta.is-staff .name .icon-chat-cohost,
-#user-rollover.id-37149102 .info .role i.icon-chat-cohost,
+#user-rollover.id-37149102 .info .role i.icon-chat-host,
 #user-lists .list.room .user.id-37149102 .icon-chat-cohost {
     background: url("https://i.imgur.com/tAGatAc.png") no-repeat !important;
 }
@@ -1027,10 +1027,10 @@ div.message > div.msg > div.from > span.un {
     content: 'Twitch Mod / ';
 }
 
-.id-37149557 .msg .from i.icon-chat-cohost,
-#waitlist .list .user[data-uid="37149557"] .meta.is-staff .name .icon-chat-cohost,
-#user-rollover.id-37149557 .info .role i.icon-chat-cohost,
-#user-lists .list.room .user.id-37149557 .icon-chat-cohost {
+.id-37149557 .msg .from i.icon-chat-host,
+#waitlist .list .user[data-uid="37149557"] .meta.is-staff .name .icon-chat-host,
+#user-rollover.id-37149557 .info .role i.icon-chat-host,
+#user-lists .list.room .user.id-37149557 .icon-chat-host {
     background: url("https://i.imgur.com/tAGatAc.png") no-repeat !important;
 }
 
@@ -1038,10 +1038,10 @@ div.message > div.msg > div.from > span.un {
     border-color: #14b866 !important;
 }
 
-.id-37149557 .msg .from.cohost .un,
+.id-37149557 .msg .from.host .un,
 .id-37149557 .from .un,
 #chat [data-cid^="37149557"] span.un.clickable,
-#waitlist .list .user[data-uid="37149557"] .meta.is-staff .name .icon-chat-cohost + span,
+#waitlist .list .user[data-uid="37149557"] .meta.is-staff .name .icon-chat-host + span,
 #user-rollover.id-37149557 .info .role span,
 #user-rollover.id-37149557 .meta .username,
 #user-lists .list.room .user.id-37149557 .name {
@@ -1074,7 +1074,7 @@ div.message > div.msg > div.from > span.un {
 
 .id-37147238 .msg .from i.icon-chat-cohost,
 #waitlist .list .user[data-uid="37147238"] .meta.is-staff .name .icon-chat-cohost,
-#user-rollover.id-37147238 .info .role i.icon-chat-cohost,
+#user-rollover.id-37147238 .info .role i.icon-chat-host,
 #user-lists .list.room .user.id-37147238 .icon-chat-cohost {
     background: url("https://i.imgur.com/xyghfYC.png") no-repeat !important;
 }
