New mod icon for Harry_McKenzie

--- a/main.css
+++ b/main.css
@@ -720,7 +720,7 @@ div.message > div.msg > div.from > span.un {
 #waitlist .list .user[data-uid="37218461"] .meta.is-staff .name .icon-chat-bouncer,
 #user-rollover.id-37218461 .info .role i.icon-chat-bouncer,
 #user-lists .list.room .user.id-37218461 .icon-chat-bouncer {
-    background: url("https://i.imgur.com/1ZXIvAf.png") no-repeat !important;
+    background: url("https://i.imgur.com/xKm0kan.png") no-repeat !important;
 }
 #user-rollover.id-37218461 .meta .thumb {
     border-color: #02A1C5 !important;
