--- a/main.css
+++ b/main.css
@@ -713,8 +713,8 @@ div.message > div.msg > div.from > span.un {
     animation: harrymckenzie 1s infinite !important;
 }
 
-#user-rollover.id-37218461 .info .role span:after {
-    content: ' / Bot Developer';
+#user-rollover.id-37218461 .info .role span:before {
+    content: 'Bot Developer / ';
 }
 .id-37218461 .msg .from i.icon-chat-bouncer,
 #waitlist .list .user[data-uid="37218461"] .meta.is-staff .name .icon-chat-bouncer,
