--- a/badges.css
+++ b/badges.css
@@ -435,7 +435,7 @@
 /*User Badge*/
 #user-rollover.id-37224716 .badge-box i.bdg,
 #chat-messages .id-37224716 .badge-box i.bdg {
-    background-image: url("https://i.imgur.com/LBI29d9.gif");
+    background-image: url("https://i.imgur.com/4wQiCiJ.gif");
     background-size: cover;
     border-radius: 7px;
     width: 100%;
