Updated my Mod Icon to smile :)

--- a/main.css
+++ b/main.css
@@ -299,7 +299,7 @@ div.message > div.msg > div.from > span.un {
 #waitlist .list .user[data-uid="3941421"] .meta.is-staff .name .icon-chat-bouncer,
 #user-rollover.id-3941421 .info .role i.icon-chat-bouncer,
 #user-lists .list.room .user.id-3941421 .icon-chat-bouncer {
-    background: url("https://i.imgur.com/cXmVlNj.png") no-repeat !important;
+    background: url("https://i.imgur.com/Jaatolt.png") no-repeat !important;
 }
 #user-rollover.id-3941421 .meta .thumb {
     border-color: #3e3e3e !important;
