This doesn't work anyway

--- a/badges.css
+++ b/badges.css
@@ -162,7 +162,7 @@
 .cm.id-37218461::before {
     background-image: url("https://i.imgur.com/T9mflGN.png");
     background-repeat: no-repeat;
-    content: "Bot Dev";
+    content: "";
     position: absolute;
     top: 0;
     left: 0;
