--- a/badges.css
+++ b/badges.css
@@ -529,7 +529,7 @@
 }
 /*User Background*/
 .cm.id-5049254::before {
-    background-image: url("");
+    background-image: url("https://i.imgur.com/SErwwK9.png");
     background-repeat: no-repeat;
     content: "";
     position: absolute;
