--- a/badges.css
+++ b/badges.css
@@ -736,7 +736,7 @@
 }
 /*User Background*/
 .cm.id-42675536::before {
-    background-image: url("https://i.imgur.com/PpRurNj.png");
+    background-image: url("https://imgur.com/8TamS9i.gif");
     background-repeat: no-repeat;
     content: "";
     position: absolute;
@@ -744,7 +744,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    opacity: 0.3;
+    opacity: 0.2;
     z-index: -1;
     transition: 0.4s;
 }
