--- a/badges.css
+++ b/badges.css
@@ -736,7 +736,7 @@
 }
 /*User Background*/
 .cm.id-42675536::before {
-    background-image: url("https://imgur.com/8TamS9i.gif");
+    background-image: url("https://i.imgur.com/L66t0EX.gif");
     background-repeat: no-repeat;
     content: "";
     position: absolute;
