Changed Discrested's name color 2

--- a/main.css
+++ b/main.css
@@ -1291,8 +1291,8 @@ div.message > div.msg > div.from > span.un {
 
 /* Discrested - Black */
 @keyframes discrested {
-    0% { color: #3300FF; }
-    100% { color: #3300FF; }
+    0% { color: #FFB009; }
+    100% { color: #FFB009; }
 }
 
 /* Poggy Woggy */
