changed color again

--- a/main.css
+++ b/main.css
@@ -1300,7 +1300,7 @@ div.message > div.msg > div.from > span.un {
     60% { color: #FFD500; }
     70% { color: #FFD500; }
     80% { color: #FFD500; }
-    90% { color: #FFD500; }
+    90% { color: #FF0000; }
     100% { color: #FFD500; }
 }
 
