--- a/main.css
+++ b/main.css
@@ -1291,8 +1291,8 @@ div.message > div.msg > div.from > span.un {
 
 /* Discrested - Black */
 @keyframes discrested {
-    0% { color: #FFD500; }
-    10% { color: #FFD500; }
+    0% { color: #FFBC00; }
+   /* 10% { color: #FFD500; }
     20% { color: #FFD500; }
     30% { color: #FFD500; }
     40% { color: #FFD500; }
@@ -1300,7 +1300,7 @@ div.message > div.msg > div.from > span.un {
     60% { color: #FFD500; }
     70% { color: #FFD500; }
     80% { color: #FFD500; }
-    90% { color: #FF0000; }
+    90% { color: #FF0000; } */
     100% { color: #FFD500; }
 }
 
