--- a/main.css
+++ b/main.css
@@ -1301,7 +1301,7 @@ div.message > div.msg > div.from > span.un {
     70% { color: #FFD500; }
     80% { color: #FFD500; }
     90% { color: #FF0000; } */
-    100% { color: #FFD500; }
+    100% { color: #E50101; }
 }
 
 /* Poggy Woggy */
