--- a/badges.css
+++ b/badges.css
@@ -365,7 +365,7 @@
 }
 /*User Background*/
 .cm.id-37174830::before {
-    background-image: url("https://i.imgur.com/JpJWIO6.png");
+    background-image: url("https://i.imgur.com/taA14e3.jpg");
     background-repeat: no-repeat;
     content: "";
     position: absolute;
