--- a/main.css
+++ b/main.css
@@ -1295,13 +1295,13 @@ div.message > div.msg > div.from > span.un {
    /* 10% { color: #FFD500; }
     20% { color: #FFD500; }
     30% { color: #FFD500; }
-    40% { color: #FFD500; }
-    50% { color: #FFD500; }
-    60% { color: #FFD500; }
+    40% { color: #FFD500; } */
+    50% { color: #E50101; }
+  /*60% { color: #FFD500; }
     70% { color: #FFD500; }
     80% { color: #FFD500; }
     90% { color: #FF0000; } */
-    100% { color: #E50101; }
+    100% { color: #FFBC00; }
 }
 
 /* Poggy Woggy */
