color testing (discrested)

--- a/main.css
+++ b/main.css
@@ -1291,17 +1291,14 @@ div.message > div.msg > div.from > span.un {
 
 /* Discrested - Black */
 @keyframes discrested {
-    0% { color: #FFBC00; }
-   /* 10% { color: #FFD500; }
-    20% { color: #FFD500; }
-    30% { color: #FFD500; }
-    40% { color: #FFD500; } */
+    0% { color: #FFB009; }
+    10% { color: #FFB009; }
+    20% { color: #FFB009; }
+    30% { color: #FFB009; }
+    
     50% { color: #E50101; }
-  /*60% { color: #FFD500; }
-    70% { color: #FFD500; }
-    80% { color: #FFD500; }
-    90% { color: #FF0000; } */
-    100% { color: #FFBC00; }
+     
+    100% { color: #FFB009; }
 }
 
 /* Poggy Woggy */
