--- a/main.css
+++ b/main.css
@@ -1291,12 +1291,13 @@ div.message > div.msg > div.from > span.un {
 
 /* Discrested - Black */
 @keyframes discrested {
-    0% { color: #E50101; }
+    0% { color: #90B0CF; }
    
    50% { color: #FFB009; }
-   60% { color: #FFB009; }
     
   100% { color: #E50101; }
+    
+    0% { color: #90B0CF; }
 }
 
 /* Poggy Woggy */
