--- a/main.css
+++ b/main.css
@@ -1291,11 +1291,11 @@ div.message > div.msg > div.from > span.un {
 
 /* Discrested - Black */
 @keyframes discrested {
-    0% { color: #90B0CF; }
+    0% { color: #000000; }
     
    50% { color: #FFB009; }
     
-  100% { color: #90B0CF; }
+  100% { color: #000000; }
 }
 
 /* Poggy Woggy */
