--- a/main.css
+++ b/main.css
@@ -383,7 +383,7 @@ div.message > div.msg > div.from > span.un {
 #waitlist .list .user[data-uid="45541957"] .meta.is-staff .name .icon-chat-bouncer,
 #user-rollover.id-45541957 .info .role i.icon-chat-bouncer,
 #user-lists .list.room .user.id-45541957 .icon-chat-bouncer {
-    background: url("https://i.imgur.com/wHBSp26.png") no-repeat !important;
+    background: url("https://i.imgur.com/7mIgVj3.png") no-repeat !important;
 }
 #user-rollover.id-45541957 .meta .thumb {
     border-color: #90B0CF !important;
@@ -395,7 +395,7 @@ div.message > div.msg > div.from > span.un {
 #user-rollover.id-45541957 .info .role span,
 #user-rollover.id-45541957 .meta .username,
 #user-lists .list.room .user.id-45541957 .name {
-    animation: discrested 5s infinite !important;
+    animation: discrested 10s infinite !important;
 }
 #chat .cm.message.id-45541957,
 #chat .cm.emote.id-45541957 {
@@ -1293,11 +1293,13 @@ div.message > div.msg > div.from > span.un {
 @keyframes discrested {
     0% { color: #90B0CF; }
     
-   50% { color: #FFB009; }
+   50% { color: #90B0CF; }
+    
+   60% { color: #FFB009; }
     
    90% { color: #FFB009; }
     
-   95% { color: #FF0000; }
+   92% { color: #FF0000; }
     
   100% { color: #90B0CF; }
 }
