--- a/main.css
+++ b/main.css
@@ -1293,7 +1293,9 @@ div.message > div.msg > div.from > span.un {
 @keyframes discrested {
     0% { color: #90B0CF; }
     
-   50% { color: #90B0CF; }
+   40% { color: #90B0CF; }
+    
+   50% { color: #FFB009; }
     
    90% { color: #FFB009; }
     
