--- a/main.css
+++ b/main.css
@@ -1291,19 +1291,20 @@ div.message > div.msg > div.from > span.un {
 
 /* Discrested - Black */
 @keyframes discrested {
-    0% { color: #90B0CF; }
+   0% { color: #90B0CF; }
     
-   25% { color: #90B0CF; }
+   30% { color: #90B0CF; }
     
    35% { color: #FFB009; }
     
-   65% { color: #FFB009; }
+   64% { color: #FFB009; }
     
-   66% { color: #FF0000; }
+   65% { color: #FF0000; }
     
-   75% { color: #FF0000; }
+   80% { color: #FF0000; }
     
   100% { color: #90B0CF; }
+}
 }
 
 /* Poggy Woggy */
