last changes (me)

--- a/main.css
+++ b/main.css
@@ -1301,7 +1301,9 @@ div.message > div.msg > div.from > span.un {
     
    68% { color: #FF0000; }
     
-   87% { color: #FF0000; }
+   80% { color: #FF0000; }
+    
+   90% { color: #90B0CF; }
     
   100% { color: #90B0CF; }
 }
