--- a/main.css
+++ b/main.css
@@ -1299,14 +1299,14 @@ div.message > div.msg > div.from > span.un {
 
 /* Discrested - Colored */
 @keyframes discrested {
-   0% { color: #90B0CF; }
+   0% { color: #87CEFA; }
    30% { color: #90B0CF; }
    35% { color: #FFB009; } 
    70% { color: #FFB009; } 
    71% { color: #FF0000; }  
    84% { color: #FF0000; }   
-   96% { color: #90B0CF; }
-  100% { color: #90B0CF; }
+   96% { color: #87CEFA; }
+  100% { color: #87CEFA; }
 }
 }
 
