changed it again

--- a/main.css
+++ b/main.css
@@ -1302,7 +1302,7 @@ div.message > div.msg > div.from > span.un {
 @keyframes discrested {
     
     0% { color: #87CEFA; }
-   25% { color: #FFAA09; }
+   25% { color: #FFAF09; }
    50% { color: #87CEFA; } 
    50% { color: #87CEFA; } 
    75% { color: #FF0000; } 
