--- a/badges.css
+++ b/badges.css
@@ -487,7 +487,7 @@
 }
 /*User Background*/
 .cm.id-45541957::before {
-    background-image: url("https://i.imgur.com/7usrVpl.png");
+    background-image: url("https://i.imgur.com/wAsqZfQ.gif");
     background-repeat: no-repeat;
     content: "";
     position: absolute;
