--- a/badges.css
+++ b/badges.css
@@ -499,3 +499,44 @@
     z-index: -1;
     transition: 0.4s;
 }
+
+/* Jeebs */
+#chat-messages .id-4183714 .badge-box {
+    width: 30px;
+    height: 30px;
+    transition: 0.5s;
+}
+
+#chat-messages .id-4183714 .badge-box:hover {
+    width: 65px;
+    height: 65px;
+    transition: 0.5s;
+}
+
+/*User Badge*/
+#user-rollover.id-4183714 .badge-box i.bdg,
+#chat-messages .id-4183714 .badge-box i.bdg {
+    background-image: url("https://i.imgur.com/toyCTdT.png");
+    background-size: cover;
+    border-radius: 7px;
+    width: 100%;
+    height: 100%;
+    background-position: initial;
+    position: absolute;
+    top: 0px;
+    left: 0px; 
+}
+/*User Background*/
+.cm.id-4183714::before {
+    background-image: url("https://i.imgur.com/ORzDdgh.gif");
+    background-repeat: no-repeat;
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.4;
+    z-index: -1;
+    transition: 0.4s;
+}
