--- a/badges.css
+++ b/badges.css
@@ -460,6 +460,7 @@
 }
 
 /* Discrested */
+/*
 #chat-messages .id-45541957 .badge-box {
     width: 30px;
     height: 30px;
@@ -499,7 +500,7 @@
     z-index: -1;
     transition: 0.4s;
 }
-
+*/
 /* Jeebs */
 #chat-messages .id-4183714 .badge-box {
     width: 30px;
