--- a/badges.css
+++ b/badges.css
@@ -460,7 +460,7 @@
 }
 
 /* Discrested */
-/*#chat-messages .id-45541957 .badge-box {
+#chat-messages .id-45541957 .badge-box {
     width: 30px;
     height: 30px;
     transition: 0.5s;
@@ -470,9 +470,9 @@
     width: 65px;
     height: 65px;
     transition: 0.5s;
-} */
+} 
 
-/*User Badge*/ /*
+/*User Badge*/ 
 #user-rollover.id-45541957 .badge-box i.bdg,
 #chat-messages .id-45541957 .badge-box i.bdg {
     background-image: url("https://i.imgur.com/9pKc1LK.gif");
@@ -484,10 +484,13 @@
     position: absolute;
     top: 0px;
     left: 0px;
-} */
-/*User Background*/ /*
+} 
+/*User Background*/ 
 .cm.id-45541957::before {
-    background-image: url("https://i.imgur.com/WciH0eG.gif");
+    background-image: url("https://i.imgur.com/24yzXjw.png");
+    
+    /*https://i.imgur.com/WciH0eG.gif*/
+    
     background-repeat: no-repeat;
     content: "";
     position: absolute;
@@ -495,10 +498,10 @@
     left: 0;
     width: 100%;
     height: 100%;
-    opacity: 0.3;
+    opacity: 0.45;
     z-index: -1;
     transition: 0.4s;
-}*/
+}
 
 /* Jeebs */
 #chat-messages .id-4183714 .badge-box {
